Fixing script.js and style.css path for vercel. very tired please make it work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Grid Game</title>
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to Grid Game</h1>
@@ -11,6 +11,6 @@
     <button id="startGame">Start Game</button>
     <div id="grid"></div>
     <p id="status"></p>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
