Fixed CSS path in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
     <meta charset="UTF-8">
     <title>Grid Game</title>
-    <link rel="stylesheet" href="/style.css">  <!-- Removed 'public/' -->
+    <link rel="stylesheet" href="/public/style.css">  <!-- Removed 'public/' -->
 </head>
 <body>
     <h1>Welcome to Grid Game</h1>
